Ignore bash_profile by default, update gitignore to commit changes to bash_profile

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# ignore bash profile (to prevent commiting osx/linux source paths)
+# remove from ignore before commiting new changes
+bash/.bash_profile
 sublime/User/Package\ Control.*
-sublime/User/P4*
-sublime/User/Perforce*
